# openwhispersync

./: .gitignore  README.md  hhgttg_raw.json  murderbot_raw.json  pyproject.toml  report.tex  sentences.json
openwhispersync/: __init__.py  __main__.py  audio.py  cli.py  core.py  download_classic.py  ebook.py  gui.py  matcher.py  visualize.py  visualize_alignment.py  visualize_confidence.py  visualize_karaoke.py  web_ui.py
openwhispersync/alignments/: chapter_00_alignment.json  chapter_17_alignment.json  chapter_18_alignment.json  chapter_21_alignment.json  chapter_9_alignment.json
openwhispersync/static/: script.js  style.css
openwhispersync/templates/: read_along.html
openwhispersync/tests/: test_audio.py  test_epub.py  test_matcher.py  test_per_segment_fallback.py  test_whisper.py  visualize_features.py
whisperless/: __init__.py  audio.py  cli.py  core.py  ebook.py
whisperless/tests/: test_whisper.py
