[project]
name = "openwhispersync"
version = "0.1.0"
description = "Sync audiobooks with ebooks"
authors = [
    {name = "Ian", email = "ian@cursor.so"},
]
dependencies = [
    "pydub>=0.25.1",
    "librosa>=0.10.1",
    "numpy>=1.24.3",
    "ebooklib>=0.18",
    "lxml>=4.9.3",
    "openai-whisper>=20231117",
]
requires-python = ">=3.9"
readme = "README.md"
license = {text = "MIT"}

[project.scripts]
openwhispersync = "openwhispersync.cli:main"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend" 